--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>co.gridport.scala</groupId>
-  <artifactId>hello-scala</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>co.gridport.</groupId>
+  <artifactId>scala-java-maven-template</artifactId>
+  <version>0.0.1_2.9.3-SNAPSHOT</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -13,7 +13,7 @@
      <dependency>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-library</artifactId>
-         <version>2.10.3</version>
+         <version>2.9.3</version>
      </dependency>
      <dependency>
           <groupId>org.scalatest</groupId>
