--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,9 @@
               </goals>
             </execution>
           </executions>
+          <jvmArgs>
+              <jvmArg>-Xmx1536m</jvmArg>
+          </jvmArgs>
       </plugin>
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
